<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BibleOne</string>
    <string name="action_settings">Settings</string>
    <string name="txtOldTestment">Old Testment</string>
    <string name="txtNewTestment">New Testment</string>
    <string name="title_activity_book">BibleOne</string>
    <string name="txtBookName">Book</string>
    <string name="chapterLabel">Chapter\ </string>
    <string name="lblSampleNum">999</string>
    <string name="lblSampleText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in felis vel quam viverra porta et sit amet felis. Phasellus scelerisque varius velit in iaculis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in est leo. Nulla quis sollicitudin augue. Cras adipiscing quam nulla, a laoreet lorem gravida id. Proin sed faucibus nunc. Quisque id metus eleifend felis dictum vestibulum. Praesent feugiat velit a dui tempus elementum.orem ipsum dolor sit amet, consectetur adipiscing elit. Donec in felis vel quam viverra porta et sit amet felis. Phasellus scelerisque varius velit in iaculis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in est leo. Nulla quis sollicitudin augue. Cras adipiscing quam nulla, a laoreet lorem gravida id. Proin sed faucibus nunc. Quisque id metus eleifend felis dictum vestibulum. Praesent feugiat velit a dui tempus elementum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in felis vel quam viverra porta et sit amet felis. Phasellus scelerisque varius velit in iaculis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="title_activity_verse">VerseActivity</string>
    <string name="title_activity_verse_fav">Favorites</string>
    <string name="lblChapterVerse">Chapter</string>
    <string name="lblChapterVerseSeparator">:</string>
    <string name="lblPrefColorSchema">Color Schema</string>
    <string name="lblPrefColorSchemaExplained">Changes the text color schema throughout the app.</string>
    <string name="lblPrefScreenTitle">Settings</string>
    <string name="lblPrefScreenTitleExplained">This is where you set up your Bible as you want</string>
    <string name="lblVersion">Version:</string>
    <string name="lblVersionNumber">X.X.X</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="strRibbon">Bookmark your reading</string>
	<string name="strMenu">Menu</string>
    
    <!-- Tela de busca -->
	<string name="strSearchHint">Search for</string>
	
	<!-- Tela de versiculos -->
	<string name="btnSaveFavorite">Save as favorite</string>
	
	<!-- Menu drawer -->
    <string-array name="drawerArray">
        <item >Search</item>
	    <item >Favorites</item>
        <item >Settings</item>
        <item >About</item>
    </string-array>
    
    <!-- Tela de configuracoes -->
    <string name="appColorDefaultValue">AppTheme</string>

</resources>
