<?xml version="1.0" encoding="utf-8"?>       
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/viewFavVerseMain"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:minHeight="40dp"
	    android:baselineAligned="false"
	    android:orientation="horizontal" >
	    
	<TextView
	      android:id="@+id/lblFavVerseRowVerseDesc"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/lblSampleText"
	      android:textAppearance="?android:attr/textAppearanceSmall"
	      android:textColor="@android:color/black"
	      android:textStyle="bold" 
	      android:layout_marginLeft="6dp"/>

	<LinearLayout
	    android:layout_width="match_parent" 
	    android:layout_height="match_parent"
	    android:layout_gravity="right|bottom"
	    android:orientation="vertical"
	    android:background="@drawable/shape_view_under" >
	    
	    <TextView android:id="@+id/lblFavVerseBookName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top|right"
	        android:text="@string/lblChapterVerse"
	        android:textSize="@dimen/text_size_for_book_name_values"
	        />
	<LinearLayout
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="right|bottom"
	    android:orientation="horizontal" >    
	    <TextView
		      android:id="@+id/lblFavVerseChapterNum"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="top|right"
		      android:minHeight="@dimen/min_textbox_height_for_number_values"
		      android:text="@string/lblSampleNum"
		      android:textSize="@dimen/text_size_for_number_values"
		      android:textColor="@android:color/black" 
		      />
	    <TextView
		      android:id="@+id/lblChapterVerseSeparator"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:gravity="center"
		      
		      android:text="@string/lblChapterVerseSeparator"
		      android:textSize="@dimen/text_size_for_number_values"
		      android:textColor="@android:color/black" 
		      />
		<TextView
		      android:id="@+id/lblFavVerseRowVerseNum"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="top|right"

		      android:minHeight="@dimen/min_textbox_height_for_number_values"
		      android:text="@string/lblSampleNum"
		      android:textSize="@dimen/text_size_for_number_values"
		      android:textColor="@android:color/black" 
		      />
		</LinearLayout>
	</LinearLayout>
	

</FrameLayout>
