<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" 
        android:gravity="center"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/imgAboutLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblVersion"
                android:textAppearance="?android:attr/textAppearanceMedium"  
            	android:textColor="@android:color/white"
            	android:padding="2dp"/>

            <TextView
                android:id="@+id/txtVersionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblVersionNumber"
                android:textAppearance="?android:attr/textAppearanceMedium"  
            	android:textColor="@android:color/white"
            	android:padding="2dp"
            />

        </LinearLayout>

</LinearLayout>
